--- a/static_page_parsing.ipynb
+++ b/static_page_parsing.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -13,19 +21,20 @@
     "import ast\n",
     "from selectolax.parser import HTMLParser\n",
     "import chompjs\n",
-    "import parsel"
+    "import parsel\n",
+    "print(\"OK\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![img](https://pic3.zhimg.com/80/v2-41f352b2ce83ec26279302231b701be2_720w.webp)"
+    "![img](https://pic3.zhimg.com/80/v2-41f352b2ce83ec26279302231b701be2_720w.webp)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fetch get"
+    "# Fetch get\n"
    ]
   },
   {
@@ -189,14 +198,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Xpath"
+    "# Xpath\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.youtube.com/watch?v=iTE5fQvUh6o"
+    "https://www.youtube.com/watch?v=iTE5fQvUh6o\n"
    ]
   },
   {
@@ -329,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Script"
+    "# Script\n"
    ]
   },
   {
@@ -491,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### By RE"
+    "### By RE\n"
    ]
   },
   {
@@ -530,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 遍历json"
+    "### 遍历 json\n"
    ]
   },
   {
@@ -583,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 动态网站"
+    "# 动态网站\n"
    ]
   },
   {
